--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/PizzaTheme">
+        android:theme="@style/ChompTheme">
         <activity
             android:name="uk.co.barbuzz.chompprogressview.sample.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/PizzaTheme.NoActionBar">
+            android:theme="@style/ChompTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
